--- a/School/WebApplication1/Views/Shared/_Navbar.cshtml
+++ b/School/WebApplication1/Views/Shared/_Navbar.cshtml
@@ -7,10 +7,10 @@
             <!-- <p>CT</p> -->
         </a>
         <a href="https://www.creative-tim.com" class="simple-text logo-normal">
-            Im a LOL
-            <!-- <div class="logo-image-big">
+            Trần Đức Hải
+             @*<div class="logo-image-big">
               <img src="../assets/img/logo-big.png">
-            </div> -->
+            </div>*@ 
         </a>
     </div>
     <div class="sidebar-wrapper" style="overflow-x: hidden">
@@ -33,13 +33,7 @@
                     <i class="nc-icon nc-bank"></i>
                     <p>Khách Hàng</p>
                 </a>
-            </li>
-            <li>
-                <a href="/ds-khach-hang">
-                    <i class="nc-icon nc-bank"></i>
-                    <p>Ds Khách Hàng</p>
-                </a>
-            </li>
+            </li> 
             <li>
                 <a href="/HangHoa">
                     <i class="nc-icon nc-bell-55"></i>
@@ -48,13 +42,13 @@
             </li>
 
             <li>
-                <a href="/don-hang">
+                <a href="/DonHang">
                     <i class="nc-icon nc-single-02"></i>
                     <p>Đơn hàng</p>
                 </a>
             </li>
             <li>
-                <a href="/ChiTietDH">
+                <a href="/ChiTietDonHang">
                     <i class="nc-icon nc-tile-56"></i>
                     <p>Chi Tiết Đơn Hàng</p>
                 </a>
