--- a/School/WebApplication1/Views/DonHang/Edit.cshtml
+++ b/School/WebApplication1/Views/DonHang/Edit.cshtml
@@ -1,354 +1,89 @@
-﻿@*@model StoreManagement.Models.DonHangModel
-
-    @{
-        Layout = null;
-    }
-
-    <!DOCTYPE html>
-
-    <html>
-    <head>
-        <meta name="viewport" content="width=device-width" />
-        <title>Edit</title>
-    </head>
-    <body>
-
-    <h4>DonHangModel</h4>
-    <hr />
-    <div class="row">
-        <div class="col-md-4">
-            <form asp-action="Edit">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="IdKhachHang" class="control-label"></label>
-                    <input asp-for="IdKhachHang" class="form-control" />
-                    <span asp-validation-for="IdKhachHang" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="TenKhachHang" class="control-label"></label>
-                    <input asp-for="TenKhachHang" class="form-control" />
-                    <span asp-validation-for="TenKhachHang" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="NgayLap" class="control-label"></label>
-                    <input asp-for="NgayLap" class="form-control" />
-                    <span asp-validation-for="NgayLap" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="PhiVanChuyen" class="control-label"></label>
-                    <input asp-for="PhiVanChuyen" class="form-control" />
-                    <span asp-validation-for="PhiVanChuyen" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="ThanhTien" class="control-label"></label>
-                    <input asp-for="ThanhTien" class="form-control" />
-                    <span asp-validation-for="ThanhTien" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="TongTien" class="control-label"></label>
-                    <input asp-for="TongTien" class="form-control" />
-                    <span asp-validation-for="TongTien" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="TrangThaiDonHang" class="control-label"></label>
-                    <input asp-for="TrangThaiDonHang" class="form-control" />
-                    <span asp-validation-for="TrangThaiDonHang" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="TrangThaiThanhToan" class="control-label"></label>
-                    <input asp-for="TrangThaiThanhToan" class="form-control" />
-                    <span asp-validation-for="TrangThaiThanhToan" class="text-danger"></span>
-                </div>
-                <input type="hidden" asp-for="Id" />
-                <div class="form-group">
-                    <label asp-for="CreatedBy" class="control-label"></label>
-                    <input asp-for="CreatedBy" class="form-control" />
-                    <span asp-validation-for="CreatedBy" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="CreatedDate" class="control-label"></label>
-                    <input asp-for="CreatedDate" class="form-control" />
-                    <span asp-validation-for="CreatedDate" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="UpdatedDate" class="control-label"></label>
-                    <input asp-for="UpdatedDate" class="form-control" />
-                    <span asp-validation-for="UpdatedDate" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="UpdatedBy" class="control-label"></label>
-                    <input asp-for="UpdatedBy" class="form-control" />
-                    <span asp-validation-for="UpdatedBy" class="text-danger"></span>
-                </div>
-                <div class="form-group form-check">
-                    <label class="form-check-label">
-                        <input class="form-check-input" asp-for="IsDeleted" /> @Html.DisplayNameFor(model => model.IsDeleted)
-                    </label>
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-primary" />
-                </div>
-            </form>
-        </div>
-    </div>
-
-    <div>
-        <a asp-action="Index">Back to List</a>
-    </div>
-
-    @section Scripts {
-        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    }
-    </body>
-    </html>*@
+﻿@model StoreManagement.Models.DonHangModel
 
 @{
-    Layout = null;
+    ViewData["Title"] = "Edit";
 }
 
-<head>
-    <title>Đơn Hàng Edit</title>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600' rel='stylesheet' type='text/css'>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-    <style>
-        html, body {
-            min-height: 100%;
-        }
+<link href="~/css/hai.css" rel="stylesheet" type="text/css" />
 
-        body, div, form, input, select, p {
-            padding: 0;
-            margin: 0;
-            outline: none;
-            font-family: Roboto, Arial, sans-serif;
-            font-size: 14px;
-            color: #666;
-        }
-
-        h1 {
-            margin: 0;
-            font-weight: 400;
-        }
-
-        h3 {
-            margin: 12px 0;
-            color: #8ebf42;
-        }
-
-        .main-block {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: #fff;
-        }
-
-        form {
-            width: 100%;
-            padding: 20px;
-        }
-
-        fieldset {
-            border: none;
-            border-top: 1px solid #8ebf42;
-        }
-
-        .account-details, .personal-details {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-        }
-
-            .account-details > div, .personal-details > div > div {
-                display: flex;
-                align-items: center;
-                margin-bottom: 10px;
-            }
-
-            .account-details > div, .personal-details > div, input, label {
-                width: 100%;
-            }
-
-        label {
-            padding: 0 5px;
-            text-align: right;
-            vertical-align: middle;
-        }
-
-        input {
-            padding: 5px;
-            vertical-align: middle;
-        }
-
-        .checkbox {
-            margin-bottom: 10px;
-        }
-
-        select, .children, .gender, .bdate-block {
-            width: calc(100% + 26px);
-            padding: 5px 0;
-        }
-
-        select {
-            background: transparent;
-        }
-
-        .gender input {
-            width: auto;
-        }
-
-        .gender label {
-            padding: 0 5px 0 0;
-        }
-
-        .bdate-block {
-            display: flex;
-            justify-content: space-between;
-        }
-
-        .birthdate select.day {
-            width: 45px;
-        }
-
-        .birthdate select.mounth {
-            width: calc(100% - 94px);
-        }
-
-        .birthdate input {
-            width: 38px;
-            vertical-align: unset;
-        }
-
-        .checkbox input, .children input {
-            width: auto;
-            margin: -2px 10px 0 0;
-        }
-
-        .checkbox a {
-            color: #8ebf42;
-        }
-
-            .checkbox a:hover {
-                color: #82b534;
-            }
-
-        button {
-            width: 100%;
-            padding: 10px 0;
-            margin: 10px auto;
-            border-radius: 5px;
-            border: none;
-            background: #8ebf42;
-            font-size: 14px;
-            font-weight: 600;
-            color: #fff;
-        }
-
-        a {
-            width: 100%;
-            padding: 5px 0;
-            margin: 10px auto;
-            border-radius: 5px;
-            border: none;
-            background: #8ebf42;
-            font-size: 15px;
-            font-weight: 600;
-            color: #fff;
-            text-decoration: none;
-        }
-
-        button:hover {
-            background: #82b534;
-        }
-    </style>
-</head>
-<body>
-    <div class="main-block">
-        <form action="/">
-            <h1>Đơn Hàng Edit</h1>
-
-            <fieldset>
-                <legend>
-                    <h3>Sửa Đơn Hàng</h3>
-                </legend>
-                <div class="personal-details">
-                    <div>
-                        <div><label>Id Khách Hàng*</label><input type="text" name="name" required></div>
-                        <div><label>Tên Khách Hàng*</label><input type="text" name="name" required></div>
-                        <div><label>Ngày Lập</label><input type="text" name="name"></div>
-                        <div><label>Đơn Giá*</label><input type="text" name="name" required></div>
-                        <div><label>Phí Vận Chuyển*</label><input type="text" name="name" required></div>
-                        <div><label>Thành Tiền*</label><input type="text" name="name" required></div>
-                        <div><label>Tổng Tiền*</label><input type="text" name="name" required></div>
-                        <div><label>Trạng Thái Đơn Hàng*</label><input type="text" name="name" required></div>
-                        <div><label>Trạng Thái Thanh Toán*</label><input type="text" name="name" required></div>
-                        <div><label>Created By*</label><input type="text" name="name" required></div>
-                        <div><label>Updated By*</label><input type="text" name="name" required></div>
-
-                    </div>
-                    <div>
-                        <div class="birthdate">
-                            <label>Create Date*</label>
-                            <div class="bdate-block">
-                                <select class="day" required>
-                                    <option value=""></option>
-                                    <option value="01">01</option>
-                                    <option value="02">02</option>
-                                    <option value="03">03</option>
-                                    <option value="04">04</option>
-                                    <option value="05">05</option>
-                                    <option value="06">06</option>
-                                    <option value="07">07</option>
-                                    <option value="08">08</option>
-                                    <option value="09">09</option>
-                                    <option value="10">10</option>
-                                    <option value="11">11</option>
-                                    <option value="12">12</option>
-                                    <option value="13">13</option>
-                                    <option value="14">14</option>
-                                    <option value="15">15</option>
-                                    <option value="16">16</option>
-                                    <option value="17">17</option>
-                                    <option value="18">18</option>
-                                    <option value="19">19</option>
-                                    <option value="20">20</option>
-                                    <option value="21">21</option>
-                                    <option value="22">22</option>
-                                    <option value="23">23</option>
-                                    <option value="24">24</option>
-                                    <option value="25">25</option>
-                                    <option value="26">26</option>
-                                    <option value="27">27</option>
-                                    <option value="28">28</option>
-                                    <option value="29">29</option>
-                                    <option value="30">30</option>
-                                    <option value="31">31</option>
-                                </select>
-                                <select class="mounth" required>
-                                    <option value=""></option>
-                                    <option value="January">January</option>
-                                    <option value="February">February</option>
-                                    <option value="March">March</option>
-                                    <option value="April">April</option>
-                                    <option value="May">May</option>
-                                    <option value="June">June</option>
-                                    <option value="July">July</option>
-                                    <option value="August">August</option>
-                                    <option value="September">September</option>
-                                    <option value="October">October</option>
-                                    <option value="November">November</option>
-                                    <option value="December">December</option>
-                                </select>
-                            </div>
-                        </div>
-
-                        <div><label>Updated By*</label><input type="text" name="name" required></div>
-
-                    </div>
-            </fieldset>
-            <button href="/">Submit</button>
-
-            <a asp-action="Index">Back to List</a>
-
-
-        </form>
+<div id="contact-form">
+    <div>
+        <h1>Sửa Đơn Hàng</h1>
+        <h4>Have a question or just want to get in touch? Let's chat.</h4>
     </div>
-</body>
+    <p id="failure">Oopsie...message not sent.</p>
+    <p id="success">Your message was sent successfully. Thank you!</p>
+
+    <form asp-action="DoEdit">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="form-group">
+            <label asp-for="IdKhachHang" class="control-label"></label>
+            <input asp-for="IdKhachHang" class="form-control" />
+            <span asp-validation-for="IdKhachHang" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="TenKhachHang" class="control-label"></label>
+            <input asp-for="TenKhachHang" class="form-control" />
+            <span asp-validation-for="TenKhachHang" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="NgayLap" class="control-label"></label>
+            <input asp-for="NgayLap" class="form-control" />
+            <span asp-validation-for="NgayLap" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="PhiVanChuyen" class="control-label"></label>
+            <input asp-for="PhiVanChuyen" class="form-control" />
+            <span asp-validation-for="PhiVanChuyen" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="ThanhTien" class="control-label"></label>
+            <input asp-for="ThanhTien" class="form-control" />
+            <span asp-validation-for="ThanhTien" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="TongTien" class="control-label"></label>
+            <input asp-for="TongTien" class="form-control" />
+            <span asp-validation-for="TongTien" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="TrangThaiDonHang" class="control-label"></label>
+            <input asp-for="TrangThaiDonHang" class="form-control" />
+            <span asp-validation-for="TrangThaiDonHang" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="TrangThaiThanhToan" class="control-label"></label>
+            <input asp-for="TrangThaiThanhToan" class="form-control" />
+            <span asp-validation-for="TrangThaiThanhToan" class="text-danger"></span>
+        </div>
+        <input type="hidden" asp-for="Id" />
+        <div class="form-group">
+            <label asp-for="CreatedBy" class="control-label"></label>
+            <input asp-for="CreatedBy" class="form-control" />
+            <span asp-validation-for="CreatedBy" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="CreatedDate" class="control-label"></label>
+            <input asp-for="CreatedDate" class="form-control" />
+            <span asp-validation-for="CreatedDate" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="UpdatedDate" class="control-label"></label>
+            <input asp-for="UpdatedDate" class="form-control" />
+            <span asp-validation-for="UpdatedDate" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="UpdatedBy" class="control-label"></label>
+            <input asp-for="UpdatedBy" class="form-control" />
+            <span asp-validation-for="UpdatedBy" class="text-danger"></span>
+        </div>
+            <div>
+                <button name="submit" type="submit" id="submit">SAVE</button>
+            </div>
+
+    </form>
+    <div>
+        <a style="color:white" asp-action="Index">Back to List</a>
+    </div>
+</div>
+ 
