--- a/School/WebApplication1/Views/KhachHang/Index.cshtml
+++ b/School/WebApplication1/Views/KhachHang/Index.cshtml
@@ -1,75 +1,107 @@
-﻿@model IEnumerable<StoreManagement.Dtos.KhachHangDto>
+﻿@model IEnumerable<StoreManagement.Models.KhachHangModel>
 
 @{
-    ViewData["Title"] = "List";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewData["Title"] = "Index";
 }
-<div class="row">
-    <div class="col-md-12">
-        <div class="card">
-            <div class="card-header">
-                <h4 class="card-title">Khách hàng</h4>
-            </div>
-            <button style="padding: 10px 10px; background: yellow "><a href="/KhachHang/Add/">Add</a></button>
-            <div class="card-body">
-                <div class="table-responsive">
-                    <table class="table">
-                        <thead class=" text-primary">
-                        <th>
-                            Id
-                        </th>
-                        <th>
-                            Tên Khách Hàng
-                        </th>
-                        <th>
-                            Email
-                        </th>
-                        <th>
-                            Mật Khẩu
-                        </th>
-                        <th>
-                            RandomKey
-                        </th>
-                        <th>
-                            Edit
-                        </th>
-                        <th>
-                            Delete
-                        </th>
 
-                        </thead>
+<h1>Index</h1>
 
-                        <tbody>
-                            @*@await Html.PartialAsync("Pagination")*@
-
-                            @{
-                                foreach (var item in Model)
-                                {
-                                    <tr>
-                                        <td>@item.Id</td>
-                                        <td>@item.HoTen</td>
-                                        <td>@item.Email</td>
-                                        <td>@item.MatKhau</td>
-                                        <td>@item.RandomKey</td>
-
-                                        <td>
-                                            <button style="background: yellow"><a href="/KhachHang/Edit/@item.Id">Edit</a></button>
-                                        </td>
-                                        <td>
-                                            <button style="background: yellow"><a href="/KhachHang/Delete/@item.Id">Delete</a></button>
-                                        </td>
-                                    </tr>
-                                }
-                            }
-                        </tbody>
-
-                    </table>
-                    @await Html.PartialAsync("Pagination")
-
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.HoTen)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Email)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.MatKhau)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.RandomKey)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DangHoatDong)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.NhanQuangCao)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IdLoaiKhachHang)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Id)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CreatedBy)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CreatedDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.UpdatedDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.UpdatedBy)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IsDeleted)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.HoTen)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.MatKhau)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.RandomKey)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DangHoatDong)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NhanQuangCao)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.IdLoaiKhachHang)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CreatedBy)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CreatedDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.UpdatedDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.UpdatedBy)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.IsDeleted)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
