--- a/School/WebApplication1/Views/Shared/Pagination.cshtml
+++ b/School/WebApplication1/Views/Shared/Pagination.cshtml
@@ -1,4 +1,4 @@
-﻿@model Tuple<int, int>
+﻿@model Tuple<int, int,string>
 @{
     var totalPages = Model.Item1 % Model.Item2 == 0 ? Model.Item1 / Model.Item2 : Model.Item1 / Model.Item2 + 1;
 
@@ -11,7 +11,7 @@
         </li>
         @for (var i = 1; i <= totalPages; i++)
         {
-            <li class="page-item"><a class="page-link" href="/ds-khach-hang?pageIndex=@i&pageSize=@Model.Item2">@i</a></li>
+            <li class="page-item"><a class="page-link" href="/@Model.Item3?pageIndex=@i&pageSize=@Model.Item2">@i</a></li>
         }
 
         <li class="page-item">
