--- a/School/WebApplication1/Views/Error/Index.cshtml
+++ b/School/WebApplication1/Views/Error/Index.cshtml
@@ -1,12 +1,11 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "404";
 }
 <style>
 
     /*======================
-        404 page
-    =======================*/
+                                404 page
+                            =======================*/
 
 
     .page_404 {
@@ -53,20 +52,27 @@
             <div class="col-sm-12 ">
                 <div class="col-sm-10 col-sm-offset-1  text-center">
                     <div class="four_zero_four_bg">
-                        <h1  class="text-center ">404</h1>
-
+                        <h1 class="text-center ">404</h1>
 
                     </div>
+                    @{
+                        if (string.IsNullOrEmpty(ViewBag.Message))
+                        {
+                            <div class="contant_box_404">
+                                <h3 class="h2">
+                                    Look like you're lost
+                                </h3>
 
-                    <div class="contant_box_404">
-                        <h3 class="h2">
-                            Look like you're lost
-                        </h3>
+                                <p class="text-center">Bạn chưa đăng nhập , hãy đăng nhập để sử dụng !</p>
 
-                        <p class="text-center">Bạn chưa đăng nhập , hãy đăng nhập để sử dụng !</p>
-
-                        <a style="text-decoration:none" href="https://localhost:44319/" class="link_404">Đăng Nhập</a>
-                    </div>
+                                <a style="text-decoration:none" href="https://localhost:44319/" class="link_404">Đăng Nhập</a>
+                            </div>
+                        }
+                        else
+                        {
+                            @ViewBag.Message
+                        }
+                    }
                 </div>
             </div>
         </div>
