--- a/School/WebApplication1/Views/Role/Save.cshtml
+++ b/School/WebApplication1/Views/Role/Save.cshtml
@@ -55,7 +55,7 @@
                 //async : false, // enable or disable async (optional, but suggested as false if you need to populate data afterwards)
                 success: function(response) {
                     if(response.success){
-                         $('#errMsg').html("<span style='color:red'>Xin chào "+ response.data +"</span>");
+                         $('#errMsg').html("<span style='color:red'>Xin chào "+ response.Data +"</span>");
                     }
                 },
                 error: function (response) {
